[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adv_mla_lab_4"
version = "0.0.1"
description = "ML Product experimentation"
authors = [
  { name = "Benedict Brunker" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["adv_mla_lab_4"]
include = ["pyproject.toml", "adv_mla_lab_4/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["adv_mla_lab_4"]
force-sort-within-sections = true

