[tool.poetry]
name = "adv-mla-lab-4"
version = "0.1.0"
description = "Model rendering tutorial"
authors = ["benedict-brunker <benedict.e.brunker@student.uts.edu.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "2.2.2"
scikit-learn = "1.5.1"
jupyterlab = "4.2.3"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
